# python-hobgoblin

./: README.md  notes.txt  setup.cfg
src/hobgoblin/: abstractpath.py  atom.py  cmdline_run.py  dataobjects.py  enum.py  misc.py  slugify.py  value.py
src/hobgoblin/config/: paths.py  source.py
src/hobgoblin/decorate/: cache.py  docstring.py  immutable.py  inject.py  resources.py
src/hobgoblin/python/: __init__.py  imports.py
src/more/: __init__.py  datetime.py  enum.py  importlib.py  ospath.py  pathlib.py  typing.py
src/more/click/: __init__.py  aliasaware.py  argtypes.py  console.py  decorators.py  predefined.py
src/more/inspect/: __init__.py  format.py
